# multi-view-desktop

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
lib/: multiview_desktop.dart
lib/src/: extensions.dart  multi_view_desktop.dart  native_channel.dart  parent_window_scope.dart  resize_edge.dart  run_multi_app.dart  shared_entry_app.dart  taskbar_menu_item.dart  title_bar_style.dart  view_root.dart  view_scope.dart  view_shell_brightness_sync.dart  views_manager.dart  window_communicator.dart  window_listener.dart  window_observer.dart  window_options.dart
linux/: CMakeLists.txt  multiview_desktop_plugin.cc  mvd_linux_internal.h  mvd_linux_log.h  mvd_linux_runner.cc  mvd_linux_taskbar_menu.cc  mvd_linux_taskbar_menu.h  mvd_linux_window.cc  mvd_linux_window.h
linux/include/multiview_desktop/: multiview_desktop_plugin.h  multiview_desktop_runner.h
linux/runner/: my_application.cc
macos/: multiview_desktop.podspec
macos/Classes/: MultiviewDesktopImpl.swift  MultiviewDesktopPlugin.swift
macos/multiview_desktop/: Package.swift
test/: multi_view_desktop_test.dart  native_channel_taskbar_menu_test.dart  run_multi_app_test.dart  taskbar_menu_item_test.dart  widget_test.dart  window_communicator_test.dart
test/scopes/: view_scope_test.dart  (+3 more)
windows/: CMakeLists.txt  multi_view_desktop.cpp  multi_view_desktop.h  multi_view_desktop_plugin.cpp  mvd_windows_taskbar_menu.cpp  mvd_windows_taskbar_menu.h
(+65 files in other folders)
